Advanced Trading System
- Multi-category sell GUI with real-time preview
- Hologram & particle effects system
- Daily limits & cooldown management
- Multi-language support (EN/TH)
- 5 specialized NPC types ready to use
- Tab completion & performance optimization